# paper2env

./: .gitignore  README.md  README_PRESENTATION.md  pyproject.toml
docs/: rules.md
paper2env/: __init__.py  cli.py
paper2env/core/: classifier.py  host.py  llm.py  models.py  orchestrator.py  parser.py  patcher.py  runner.py  state.py  templates.py  torch_compat.json  websearch.py
