[project]
name = "paper2env"
version = "0.1.1"
description = "Paper PDF to reproducible Docker environment"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "paper2env"}]
license = {text = "MIT"}
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Build Tools",
]
dependencies = [
  "pypdf>=4.0.0"
]

[project.scripts]
paper2env = "paper2env.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["paper2env*"]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"
